--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       <form name="contact" netlify netlify-honeypot="bot-field" hidden>
         <input type="text" name="name" />
         <input type="email" name="email" />
-        <textarea name="message"></textarea>
+        <textarea name="content"></textarea>
       </form>
     </div>
     <!-- built files will be auto injected -->
