--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,9 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app">
-      <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+      <form name="ask" netlify netlify-honeypot="bot-field" hidden>
         <input type="text" name="name" />
-        <input type="email" name="email" />
-        <textarea name="content"></textarea>
+        <textarea name="question"></textarea>
       </form>
     </div>
     <!-- built files will be auto injected -->
